--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<form [formGroup]="categoryForm">
+<form [formGroup]="categoryForm"(submit)="submitForm()">
 
     <div class="card">
         <div class="card-header">
@@ -30,16 +30,29 @@
             <div class="form-row">
                 <div class="form-label-group col-md-4">
                     <label for="name">Nome</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name"formControlName="name">
+                    <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
+                        <div *ngIf="categoryForm.get('name').errors.required">dado obrigatório</div>
+                        <div *ngIf="categoryForm.get('name').errors.minlength">deve ter no minimo 2 caracteres</div>
+                    </div>
                 </div>
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
-                    <input type="text" class="form-control" id="description">
+                    <input type="text" class="form-control" id="description"formControlName="description">
                 </div>
             </div>
         </div>
     </div>
+    
+    <div *ngIf="serverErrorMessages" class="alert alert-danger mt-4">
+        <strong>Erro no Servidor</strong>
+        <ul>
+            <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+        </ul>
+    </div>
 
-    <button type="submit" class = "btn btn-primary btn-lg">Salvar</button>
+    <div style="width: fit-content;margin: 0 auto">
+        <button [disabled] ="submittingForm || categoryForm.invalid" type="submit"  class = "btn btn-primary btn-lg mt-2 " >Salvar</button>
+    </div>
 
 </form>
