--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,25 +1,16 @@
-<nav class ="mb-5">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink = '/'>Home</a></li>
-        <li class="breadcrumb-item active"><a routerLink = '/categorias'>Categorias</a></li>
-        <li class="breadcrumb-item active">Formulário de categorias</li>
-    </ol>
-</nav>
+<app-bread-crumb 
+     [items]="[{text: 'Categorias', link: '/categories'},
+               {text: pageTitle}]">
+</app-bread-crumb>
 
-<div class="row mb-4">
-    <div class="col-md">
-        <h1 class="h2 border-left pl-2">
-           {{pageTitle}}
-        </h1>
-    </div>
-    <div class="col-md">
-        <a routerLink="/categories" class="btn btn-light float-right">
-            << Voltar
-        </a>
-    </div>
-</div>
+<app-page-header
+    [page-title]= "pageTitle"
+    button-text = "<< Voltar"
+    button-link = "/categories"
+    button-class = "btn-light"
+></app-page-header>
 
-<form [formGroup]="categoryForm"(submit)="submitForm()">
+<form [formGroup]="resourceForm"(submit)="submitForm()">
 
     <div class="card">
         <div class="card-header">
@@ -31,9 +22,9 @@
                 <div class="form-label-group col-md-4">
                     <label for="name">Nome</label>
                     <input type="text" class="form-control" id="name"formControlName="name">
-                    <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
-                        <div *ngIf="categoryForm.get('name').errors.required">dado obrigatório</div>
-                        <div *ngIf="categoryForm.get('name').errors.minlength">deve ter no minimo 2 caracteres</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+                        <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+                        <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no minimo 2 caracteres</div>
                     </div>
                 </div>
                 <div class="form-group col-md-8">
@@ -52,7 +43,7 @@
     </div>
 
     <div style="width: fit-content;margin: 0 auto">
-        <button [disabled] ="submittingForm || categoryForm.invalid" type="submit"  class = "btn btn-primary btn-lg mt-2 " >Salvar</button>
+        <button [disabled] ="submittingForm || resourceForm.invalid" type="submit"  class = "btn btn-primary btn-lg mt-2 " >Salvar</button>
     </div>
 
 </form>
