--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,25 +1,15 @@
-<nav class ="mb-5">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink = '/'>Home</a></li>
-        <li class="breadcrumb-item active"><a routerLink = '/entries'>Lançamentos</a></li>
-        <li class="breadcrumb-item active">{{pageTitle}}</li>
-    </ol>
-</nav>
+<app-bread-crumb 
+     [items]="[{text: 'Lançamentos', link: '/entries'},
+               {text: pageTitle}]">
+</app-bread-crumb>
+<app-page-header
+    [page-title]= "pageTitle"
+    button-text = "<< Voltar"
+    button-link = "/entries"
+    button-class = "btn-light"
+></app-page-header>
 
-<div class="row mb-4">
-    <div class="col-md-9">
-        <h1 class="h2 border-left pl-2">
-           {{pageTitle}}
-        </h1>
-    </div>
-    <div class="col-md-3">
-        <a routerLink="/entries" class="btn btn-light float-right">
-            << Voltar
-        </a>
-    </div>
-</div>
-
-<form [formGroup]="entryForm"(submit)="submitForm()">
+<form [formGroup]="resourceForm"(submit)="submitForm()">
 
     <div class="card">
         <div class="card-header">
@@ -33,17 +23,17 @@
                     <select name="type" id="type" formControlName="type" class =  "form-control">
                         <option *ngFor= "let option of typeOptions" [value]="option.value">{{option.text}}</option>
                     </select>
-                    <div class="text-danger" *ngIf="entryForm.get('type').invalid && entryForm.get('type').touched">
-                        <div *ngIf="entryForm.get('type').errors.required">dado obrigatório</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
+                        <div *ngIf="resourceForm.get('type').errors.required">dado obrigatório</div>
                     </div>
                 </div>
 
                 <div class="form-group col-md-5">
                     <label for="name">Lançamento</label>
                     <input type="text" class="form-control" id="name"formControlName="name">
-                    <div class="text-danger" *ngIf="entryForm.get('name').invalid && entryForm.get('name').touched">
-                        <div *ngIf="entryForm.get('name').errors.required">dado obrigatório</div>
-                        <div *ngIf="entryForm.get('name').errors.minlength">deve ter no minimo 2 caracteres</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+                        <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+                        <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no minimo 2 caracteres</div>
                     </div>
                 </div>
 
@@ -55,8 +45,8 @@
                         </div>
                         <input type="text" [imask]="imaskConfig" class="text-right form-control" id="amount"formControlName="amount">
                     </div>
-                    <div class="text-danger" *ngIf="entryForm.get('amount').invalid && entryForm.get('amount').touched">
-                        <div *ngIf="entryForm.get('amount').errors.required">dado obrigatório</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
+                        <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
                     </div>
                 </div>
 
@@ -71,8 +61,8 @@
                     [locale]="ptBR"
                     [showButtonBar]=true>
                     </p-calendar>
-                    <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
-                        <div *ngIf="entryForm.get('date').errors.required">dado obrigatório</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
+                        <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
                     </div>
                 </div>
             </div>
@@ -81,12 +71,12 @@
                 <div class="form-group col-md-2">
                     <label for="paid">Pago</label>
                     <div class="btn-group">
-                        <label [class.active] = "entryForm.get('paid').value == true"class = "btn btn-outline-info" (click)="entryForm.get('paid').setValue(true)">Pago</label>
-                        <label [class.active] = "entryForm.get('paid').value == false" class = "btn btn-outline-info" (click)="entryForm.get('paid').setValue(false)">Pendente</label>
+                        <label [class.active] = "resourceForm.get('paid').value == true"class = "btn btn-outline-info" (click)="resourceForm.get('paid').setValue(true)">Pago</label>
+                        <label [class.active] = "resourceForm.get('paid').value == false" class = "btn btn-outline-info" (click)="resourceForm.get('paid').setValue(false)">Pendente</label>
                     </div>
 
-                    <div class="text-danger" *ngIf="entryForm.get('paid').invalid && entryForm.get('paid').touched">
-                        <div *ngIf="entryForm.get('paid').errors.required">dado obrigatório</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
+                        <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
                     </div>
                 </div>
 
@@ -95,8 +85,8 @@
                     <select name="categoryId" id="categoryId" formControlName="categoryId" class =  "form-control">
                         <option *ngFor="let cat of categories" [value]="cat.id">{{cat.name}}</option>
                     </select>
-                    <div class="text-danger" *ngIf="entryForm.get('categoryId').invalid && entryForm.get('categoryId').touched">
-                        <div *ngIf="entryForm.get('categoryId').errors.required">dado obrigatório</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
+                        <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
                     </div>
                 </div>
 
@@ -116,7 +106,7 @@
     </div>
 
     <div style="width: fit-content;margin: 0 auto">
-        <button [disabled] ="submittingForm || entryForm.invalid" type="submit"  class = "btn btn-primary btn-lg mt-2 " >Salvar</button>
+        <button [disabled] ="submittingForm || resourceForm.invalid" type="submit"  class = "btn btn-primary btn-lg mt-2 " >Salvar</button>
     </div>
 
 </form>
