--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -23,18 +23,13 @@
                     <select name="type" id="type" formControlName="type" class =  "form-control">
                         <option *ngFor= "let option of typeOptions" [value]="option.value">{{option.text}}</option>
                     </select>
-                    <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
-                        <div *ngIf="resourceForm.get('type').errors.required">dado obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control] = "resourceForm.get('type')"></app-form-field-error>
                 </div>
 
                 <div class="form-group col-md-5">
                     <label for="name">Lançamento</label>
                     <input type="text" class="form-control" id="name"formControlName="name">
-                    <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
-                        <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
-                        <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no minimo 2 caracteres</div>
-                    </div>
+                    <app-form-field-error [form-control] = "resourceForm.get('name')"></app-form-field-error>
                 </div>
 
                 <div class="form-group col-md-3">
@@ -45,9 +40,7 @@
                         </div>
                         <input type="text" [imask]="imaskConfig" class="text-right form-control" id="amount"formControlName="amount">
                     </div>
-                    <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
-                        <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control] = "resourceForm.get('amount')"></app-form-field-error>
                 </div>
 
                 <div class="form-label-group col-md-2">
@@ -61,9 +54,7 @@
                     [locale]="ptBR"
                     [showButtonBar]=true>
                     </p-calendar>
-                    <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
-                        <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control] = "resourceForm.get('date')"></app-form-field-error>
                 </div>
             </div>
 
@@ -75,9 +66,8 @@
                         <label [class.active] = "resourceForm.get('paid').value == false" class = "btn btn-outline-info" (click)="resourceForm.get('paid').setValue(false)">Pendente</label>
                     </div>
 
-                    <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
-                        <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control] = "resourceForm.get('paid')"></app-form-field-error>
+
                 </div>
 
                 <div class="form-group col-md-3">
@@ -85,14 +75,13 @@
                     <select name="categoryId" id="categoryId" formControlName="categoryId" class =  "form-control">
                         <option *ngFor="let cat of categories" [value]="cat.id">{{cat.name}}</option>
                     </select>
-                    <div class="text-danger" *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
-                        <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control] = "resourceForm.get('categoryId')"></app-form-field-error>
                 </div>
 
                 <div class="form-group col-md-7">
                     <label for="description">Descrição</label>
                     <input type="text" class="form-control" id="description"formControlName="description">
+                    <app-form-field-error [form-control] = "resourceForm.get('description')"></app-form-field-error>
                 </div>
             </div><!--row-->
         </div>
