--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -3,6 +3,7 @@
 </app-bread-crumb>
 <app-page-header
     page-title= "Relatório de Receitas e Despesas"
+   [show-button] = "false"
 ></app-page-header>
 <div class="card">
     <div class="card-header">
@@ -32,12 +33,62 @@
                 <label for="year">Ano</label>
                 <select name="year" id="year" #year class="form-control">
                     <option value="">Selecione um Ano</option>
-                    <option value="1">2019</option>
-                    <option value="2">2020</option>
-                    <option value="3">2021</option>
-                    <option value="4">2022</option>
+                    <option value="2017">2017</option>
+                    <option value="2018">2018</option>
+                    <option value="2019">2019</option>
+                    <option value="2020">2020</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
                 </select>
             </div>
+
+            <div class="form-row">
+                <div class="col-md text-right">
+                    <button type = "button" (click) = "generateReports()" class="btn btn-primary float-right">
+                        Gerar Relatórios
+                    </button>
+                </div>
+            </div>
         </div>
+    </div>
+</div>
+
+<div class="card-deck mt-5 mb-5">
+    <div class="card text-center text-white bg-success">
+        <div class="card-header">
+            TOTAL DE RECEITAS
+        </div>
+        <div class="card-body">
+            <h3 class="card-title">{{revenueTotal}}</h3>
+        </div>
+    </div>
+
+    <div class="card text-center text-white bg-danger">
+        <div class="card-header">
+            TOTAL DE DESPESAS
+        </div>
+        <div class="card-body">
+            <h3 class="card-title">{{expenseTotal}}</h3>
+        </div>
+    </div>
+
+    <div class="card text-center text-white bg-info">
+        <div class="card-header">
+            SALDO
+        </div>
+        <div class="card-body">
+            <h3 class="card-title">{{balance}}</h3>
+        </div>
+    </div>
+
+</div>
+
+<hr>
+<div class="row mt-5 mb-4">
+     <div class="col-md-6">
+        <p-chart type =  "bar" [data]="revenueChartData" [options]= "chartOptions"></p-chart>
+     </div>
+     <div class="col-md-6">
+        <p-chart type =  "bar" [data]="expenseChartData" [options]= "chartOptions"></p-chart>
     </div>
 </div>
