--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -4,8 +4,8 @@
             {{pageTitle}}
         </h1>
     </div>
-    <div class="col-md">
-        <a [routerLink]="buttonLink" class="btn float-right" [ngClass]="buttonClass">
+    <div *ngIf = "showButton" class="col-md-3 text-right">
+        <a [routerLink]="buttonLink" class="btn" [ngClass]="buttonClass">
            {{buttonText}}
         </a>
     </div>
