--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-navbar></app-navbar>
+
+<router-outlet></router-outlet>
+
+
+<!--app-navbar></app-navbar>
 <div class="container">
   <router-outlet></router-outlet>
-</div>
+</div!-->
