--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="mb-4 navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class=" navbar navbar-expand-lg navbar-dark bg-primary blue-header-gradient">
     <a class="navbar-brand" routerLink="/">FINAN$YS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
