--- a/src/app/pages/base/base/base.component.css
+++ b/src/app/pages/base/base/base.component.css
@@ -1,8 +1,8 @@
 .base-container{
-    margin: 16px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+
     height: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
 }
 .placeholder-container{
     margin-top:16px;
@@ -11,6 +11,7 @@
 .menu{
     max-width: 256px;
     height: 100%;
+    padding: 0px !important;
 }
 .row{
     height: 100%;
