--- a/src/app/pages/base/base/base.component.html
+++ b/src/app/pages/base/base/base.component.html
@@ -1,6 +1,7 @@
-<app-navbar></app-navbar>
+
 <div class="base-container">
-    <div class="row">
+        <app-navbar></app-navbar>
+    <div class="row" style="margin: 0 !important;">
             <div class="col-3 menu" style="background: black"></div>
             <div class="col placeholder-container">
                 <router-outlet></router-outlet>
