side nav menu com estilização quase completa, faltando principalmente mostrar qual link ta ativo, e a parte de rout tbm

--- a/src/app/pages/base/base/base.component.html
+++ b/src/app/pages/base/base/base.component.html
@@ -2,7 +2,7 @@
 <div class="base-container">
         <app-navbar></app-navbar>
     <div class="row" style="margin: 0 !important;">
-            <div class="col-3 menu" style="background: black"></div>
+            <div class="col-3 menu" style="background: #ddd"><app-side-menu></app-side-menu></div>
             <div class="col placeholder-container">
                 <router-outlet></router-outlet>
             </div>
