--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 .blue-header-gradient{
     background: linear-gradient(90deg, rgba(0,123,255,1) 27%, rgba(12,60,232,1) 99%);
     color: white;
@@ -9,3 +10,6 @@
     margin: 0 auto;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
