Alterações  e criação do formulario de pessoais, inicio da troca dos inputs para material angular, com floatings labels

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class=" navbar navbar-expand-lg navbar-dark bg-primary blue-header-gradient">
+<nav class=" navbar navbar-expand-lg navbar-dark bg-primary blue-header-gradient" style = " color: #fefefe !important"> 
 
      <div class="row first-row">
        <div class="c col-1">
