--- a/src/app/pages/base/base/base.component.css
+++ b/src/app/pages/base/base/base.component.css
@@ -1,18 +1,47 @@
 .base-container{
-
-    height: 100%;
-    max-width: 1280px;
+    max-height: 1080px;
+    height: 820px;
+    width: 85%;
+    max-width: 2000px;
     margin: 0 auto;
+    vertical-align: middle;
+}
+
+.background{
+    background: rgb(132,135,149);
+    background: url(../../../../assets/background.jpg) #000 no-repeat center;
+    background-size: cover;
+    width: 100%;
+    background: 444;
+    height: 100%;
+
+}
+.background::before {
+    content: "";
+    position: absolute;
+    top: -20px; left: -20px;
+    width: 110%; height: 110%;
+    background-image: url(../../../../assets/background.jpg);
+    filter: blur(15px);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .placeholder-container{
-    margin-top:16px;
+    background: #fdfdfe;
+    padding-top:16px;
+    max-height: 1012px;
 }
 
 .menu{
     max-width: 256px;
     height: 100%;
     padding: 0px !important;
+    background: rgba(12,60,232,1);
+    max-height: 1012px;
 }
 .row{
     height: 100%;
+    max-height: 1012px;
 }
+
+
