--- a/src/app/pages/dashboard/dash/dash.component.html
+++ b/src/app/pages/dashboard/dash/dash.component.html
@@ -1,1 +1,33 @@
-<p>dash works!</p>
+
+<div class="container">
+    <div class="row  linha01">
+        <div class="col-6 coluna">
+
+            <div class="card">
+                    <div class="card-header">
+                            <h2>Novidades</h2>
+                    </div>
+                    <div class="card-body">
+                        <p>Vestibulum aliquet ante vel massa volutpat, eu placerat lectus ultrices.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                    </div>
+                    
+                </div>
+        </div> <!--Fim Coluna 01 da linha 01-->
+
+        <div class="col-6 coluna">
+            <div class="card">
+
+            </div>
+        </div><!--Fim Coluna 02 da linha 01-->
+    </div><!--Fim linha 01-->
+    <div class="row linha02">
+        <div class="col-6 coluna"> 
+
+        </div><!--Fim da coluna 01 linha 02-->
+
+        <div class="col-6 coluna">
+
+        </div><!--Fim da coluna 02 linha 02-->
+    </div><!--Fim linha 01-->
+</div>
