--- a/src/app/core/components/side-nav-menu/side-nav-menu.component.css
+++ b/src/app/core/components/side-nav-menu/side-nav-menu.component.css
@@ -1,6 +1,7 @@
 .side-menu-container{
     max-width: 256px;
     height: 100%;
+    max-height: 900px;
 
 }
 .logo-container{
@@ -11,8 +12,6 @@
     max-height: 256px;
     box-sizing: border-box;
     padding: 28px;
-    border-bottom: 1px solid #575757;
-    
 }
 
 .logo{
@@ -24,5 +23,5 @@
 
 .nav-links-container{
     width: 100%;
-    height: 100%;
+    
 }
