--- a/src/app/pages/base/base/base.component.html
+++ b/src/app/pages/base/base/base.component.html
@@ -1,11 +1,13 @@
 
-<div class="base-container">
-        <app-navbar></app-navbar>
-    <div class="row" style="margin: 0 !important;">
-            <div class="col-3 menu" style="background: #ddd"><app-side-menu></app-side-menu></div>
-            <div class="col placeholder-container">
-                <router-outlet></router-outlet>
-            </div>
-        </div>
-</div>
 
+<div class="background">
+    <div class="base-container">
+            <app-navbar></app-navbar>
+        <div class="row" style="margin: 0 !important;">
+                <div class="col-3 menu menu-background-color"  ><app-side-menu></app-side-menu></div>
+                <div class="col placeholder-container">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+    </div>
+</div>
