--- a/src/app/pages/login/login-form/login-form.component.css
+++ b/src/app/pages/login/login-form/login-form.component.css
@@ -84,8 +84,8 @@
     .background_full::before {
         content: "";
         position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
+        top: -20px; left: -20px;
+        width: 110%; height: 110%;
         background-image: url(../../../../assets/background.jpg);
         filter: blur(15px);
         background-repeat: no-repeat;
