Finalizando formulario para informações pessoais basicas

--- a/src/app/pages/login/login-form/login-form.component.css
+++ b/src/app/pages/login/login-form/login-form.component.css
@@ -80,7 +80,9 @@
     background: url(../../../../assets/background.jpg) #000 no-repeat center;
 }
 
-
+mat-form-field{
+    width: 100%;
+}
     .background_full::before {
         content: "";
         position: absolute;
