--- a/src/app/pages/login/login-form/login-form.component.html
+++ b/src/app/pages/login/login-form/login-form.component.html
@@ -12,16 +12,20 @@
                     <div class="card-body">
                         <div class="form-group row">
                             <div class=" input input-user">
-                                    <input type="text" class="form-control" placeholder="Usuario" id="login"formControlName="login">
-                                    <app-form-field-error [form-control] = "resourceForm.get('login')"></app-form-field-error>
+                                <mat-form-field>
+                                    <input matInput placeholder="Usuario" [formControl]="resourceForm.get('login')">
+                                    <mat-error >{{getErrorMessage(resourceForm.get('login'))}}</mat-error>
+                                </mat-form-field>
                             </div>
                         </div>
         
                         <div class="form-group row">
-                                <div class="input input-password">
-                                    <input type="password" placeholder="Senha" class="form-control" id="password"formControlName="password">
-                                    <app-form-field-error [form-control] = "resourceForm.get('password')"></app-form-field-error>
-                                </div>
+                            <div class="input input-password">
+                                <mat-form-field>
+                                    <input matInput placeholder="Senha" [formControl]="resourceForm.get('password')">
+                                    <mat-error >{{getErrorMessage(resourceForm.get('password'))}}</mat-error>
+                                </mat-form-field>
+                            </div>
                         </div>
                         <app-server-error-message [server-error-messages] = "serverErrorMessages"></app-server-error-message>
                         <div class="btn-div">
