--- a/src/styles.css
+++ b/src/styles.css
@@ -39,8 +39,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
    
 }
 
-.header-bluegray{
-    background: #fafafa !important ;
-    color: #446;
+.sub-header-white{
+    background: white !important ;
+    color: #000066;
     font-weight: bold;
 }
