--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -1,6 +1,7 @@
-.first-row{
-   
+.container {
+    max-width: 1440px;
 }
+
 .c{
     max-height: 52px;
 }
@@ -8,7 +9,7 @@
     padding-bottom: 0px;
     
     width: 100%;
-    max-width: 1280px;
+    
     margin: 0 auto;
 }
 .navbar{
