--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,54 +1,56 @@
 <nav class=" navbar navbar-expand-lg navbar-dark bg-primary blue-header-gradient" style = " color: #fefefe !important"> 
+      <div class="container">
 
-     <div class="row first-row">
-       <div class="c col-1">
-          <a class= "navbar-brand" href="#">
-              <img class = " header-icon" src="../../../../assets/icons/feasyweb-white-128.png" width="48" height="48" alt="">
-            </a>
-       </div>
-
-       <div class="c col-5 header-title">
-           <h1>Nome da Empresa</h1>
-       </div>
-
-       <div class="c col-3 header-icons">
-         <ul class = "icons-ul ">
-           <li class = "header-notification">
-              <a class="navbar-brand" href="#">
-                  <img src="../../../../assets/icons/notification-white-96.png" width="42" height="42" alt="">
-                </a>
-           </li>
-           <li class = "header-helper">
-              <a class="navbar-brand" href="#">
-                  <img src="../../../../assets/icons/help-white-96.png" width="42" height="42" alt="">
-                </a>
-           </li>
-           <li class = "header-setting">
-              <a class="navbar-brand" href="#">
-                  <img src="../../../../assets/icons/setting-white-96.png" width="42" height="42" alt="">
-                </a>
-           </li>
-         </ul>
-         
-       </div>
-
-       <div class="c col-3 header-person">
-          <div class="row person-identification-container ">
-              <div class="coluna-person-img">
-                  <img class="person-img"  src="../../../../assets/icons/person-white096.png" width="24" height="24" alt="">
-              </div>
-              <div class="person-name">
-                    Gustavo Valeiro
-              </div>
-       
+        <div class="row first-row">
+          <div class="c col-1">
+             <a class= "navbar-brand" href="#">
+                 <img class = " header-icon" src="../../../../assets/icons/feasyweb-white-128.png" width="48" height="48" alt="">
+               </a>
           </div>
-            <div class="row">
-              <div class="person-expirate row">
-                  Expira em: 1 hora e 20 minutos.
-              </div>
-            </div>
+   
+          <div class="c col-5 header-title">
+              <h1>Nome da Empresa</h1>
+          </div>
+   
+          <div class="c col-3 header-icons">
+            <ul class = "icons-ul ">
+              <li class = "header-notification">
+                 <a class="navbar-brand" href="#">
+                     <img src="../../../../assets/icons/notification-white-96.png" width="42" height="42" alt="">
+                   </a>
+              </li>
+              <li class = "header-helper">
+                 <a class="navbar-brand" href="#">
+                     <img src="../../../../assets/icons/help-white-96.png" width="42" height="42" alt="">
+                   </a>
+              </li>
+              <li class = "header-setting">
+                 <a class="navbar-brand" href="#">
+                     <img src="../../../../assets/icons/setting-white-96.png" width="42" height="42" alt="">
+                   </a>
+              </li>
+            </ul>
+            
+          </div>
+   
+          <div class="c col-3 header-person">
+             <div class="row person-identification-container ">
+                 <div class="coluna-person-img">
+                     <img class="person-img"  src="../../../../assets/icons/person-white096.png" width="24" height="24" alt="">
+                 </div>
+                 <div class="person-name">
+                       Gustavo Valeiro
+                 </div>
+          
+             </div>
+               <div class="row">
+                 <div class="person-expirate row">
+                     Expira em: 1 hora e 20 minutos.
+                 </div>
+               </div>
+           </div>
         </div>
-     </div>
+      </div>
 
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
