--- a/src/app/pages/base/base/base.component.css
+++ b/src/app/pages/base/base/base.component.css
@@ -1,21 +1,24 @@
-.base-container{
-    max-height: 1080px;
-    height: 820px;
-    width: 85%;
-    max-width: 2000px;
-    margin: 0 auto;
-    vertical-align: middle;
+.container{
+    max-width: 1440px;
+  
 }
 
-.background{
-    background: rgb(132,135,149);
-    background: url(../../../../assets/background.jpg) #000 no-repeat center;
-    background-size: cover;
-    width: 100%;
-    background: 444;
-    height: 100%;
-
+.menu{
+    padding: 0px !important;
+    margin-top: 12px;
 }
+.header{
+    padding: 0 !important;
+}
+
+
+
+.conteudo{
+    padding-top: 72px;
+    background-color: #fff !important;
+}
+
+
 .background::before {
     content: "";
     position: absolute;
@@ -34,14 +37,10 @@
 
 .menu{
     max-width: 256px;
-    height: 100%;
+    max-height: 100%;
     padding: 0px !important;
     background: rgba(12,60,232,1);
-    max-height: 1012px;
 }
 .row{
-    height: 100%;
-    max-height: 1012px;
+
 }
-
-
