--- a/src/app/pages/base/base/base.component.html
+++ b/src/app/pages/base/base/base.component.html
@@ -1,13 +1,17 @@
-
-
 <div class="background">
-    <div class="base-container">
-            <app-navbar></app-navbar>
-        <div class="row" style="margin: 0 !important;">
-                <div class="col-3 menu menu-background-color"  ><app-side-menu></app-side-menu></div>
-                <div class="col placeholder-container">
-                    <router-outlet></router-outlet>
-                </div>
+
+    <div class="container">
+        <div class="row">
+            <app-navbar class="col-12 fixed-top header"></app-navbar>
+        </div>
+        <div class="row row-conteudo">
+    
+                <app-side-menu class="col-md-2 menu-background-color menu" ></app-side-menu>
+    
+            <div class=" conteudo col-md-10">
+                <router-outlet></router-outlet>
             </div>
+        </div>
     </div>
 </div>
+
