--- a/src/app/pages/pessoal/cliente/cliente-form/cliente-form.component.css
+++ b/src/app/pages/pessoal/cliente/cliente-form/cliente-form.component.css
@@ -16,6 +16,7 @@
     margin-left: 12px;
     margin-right: 12px;
     border-bottom: 1px solid #ddd;
+    margin-bottom: 12px;
 }
 
 .pessoa-fisica{
