--- a/src/app/shared/components/sub-header-form/sub-header-form.component.html
+++ b/src/app/shared/components/sub-header-form/sub-header-form.component.html
@@ -1,12 +1,12 @@
 <div class="card-header sub-header-white">
     <div class="row">
         <div class="col-md">
-                <h5 style="margin-bottom: 0px; position: absolute; bottom: 0px;"> {{titulo}} </h5> 
+                <h1 class="h6" style=" margin-bottom: 0px; position: absolute; bottom: 0px;"> {{titulo}} </h1> 
         </div>
         <div class="col-md-3 text-right">
-            <div (click) ="click()" class="btn btn-success btn-adiciona-complementar ">
+            <button type="button" [disabled]= "!enable"(click) ="click()" class="btn btn-success btn-adiciona-complementar ">
                 {{botaoTexto}}
-            </div>
+            </button>
         </div>
     </div> <!--fim da linha do sub titulo-->
 </div>
