--- a/src/app/shared/components/telefone-form/telefone-form.component.html
+++ b/src/app/shared/components/telefone-form/telefone-form.component.html
@@ -1,6 +1,6 @@
-<app-sub-header-form titulo="Telefone(s)" botaoTexto="+ Telefone" (funcao)="adicionarTelefone($event)"></app-sub-header-form>
+<app-sub-header-form titulo="Telefone(s)" botaoTexto="+ Telefone" (funcao)="adicionarElemento($event)" [enable]="formArray.enabled"></app-sub-header-form>
 <div class="card-body">
-    <div class="row row-telefone"  *ngFor= "let telefone of telefones.controls; let i = index">
+    <div class="row row-telefone"  *ngFor= "let telefone of formArray.controls; let i = index">
         <div class="col-md-3 col-tipo">
            <mat-form-field>
                 <input matInput placeholder="Tipo" [formControl]="telefone.get('tipo')">
@@ -19,9 +19,8 @@
                 <mat-error >{{getErrorMessage(telefone.get('numero'))}}</mat-error>
             </mat-form-field>  
         </div>
-        <excluir-complementar-row [index]="i" (callFunction)="excluirTelefone($event)" [disabled]= "telefone.get('principal').value == true"></excluir-complementar-row>
         <div class="col-md-1 col-excluir">
-         
+                <excluir-complementar-row [index]="i" (callFunction)="excluirElemento($event)" [disabled]= "telefone.get('principal').value == true"></excluir-complementar-row> 
         </div>
     </div>  <!--fim da primeira linha do body do complementar-->
 </div>
