--- a/src/app/pages/base/base/base.component.html
+++ b/src/app/pages/base/base/base.component.html
@@ -8,7 +8,7 @@
     
                 <app-side-menu class="col-md-2 menu-background-color menu" ></app-side-menu>
     
-            <div class=" conteudo col-md-10">
+            <div class=" conteudo col-md-10 overflow-auto ">
                 <router-outlet></router-outlet>
             </div>
         </div>
