--- a/src/app/core/components/side-nav-menu/side-nav-menu.component.css
+++ b/src/app/core/components/side-nav-menu/side-nav-menu.component.css
@@ -1,13 +1,13 @@
 .side-menu-container{
     max-width: 256px;
-    height: 100%;
+    height: calc(100vh - 62px);
     max-height: 900px;
 
 }
 .logo-container{
     width: 100%;
     height: 100%;
-    margin-top: 30px;
+    margin-top: 62px;
     max-width: 256px;
     max-height: 256px;
     box-sizing: border-box;
