--- a/src/app/pages/base/base/base.component.css
+++ b/src/app/pages/base/base/base.component.css
@@ -1,11 +1,13 @@
 .container{
     max-width: 1440px;
-  
+    height: 100vh;
+    margin: 0 auto!important;
 }
-
+.row-conteudo{
+    height: 100vh;
+}
 .menu{
     padding: 0px !important;
-    margin-top: 12px;
 }
 .header{
     padding: 0 !important;
@@ -14,26 +16,23 @@
 
 
 .conteudo{
-    padding-top: 72px;
+    padding: 16px;
+    padding-top: 78px;
     background-color: #fff !important;
+    height: 100vh;
 }
 
 
 .background::before {
     content: "";
     position: absolute;
-    top: -20px; left: -20px;
-    width: 110%; height: 110%;
-    background-image: url(../../../../assets/background.jpg);
-    filter: blur(15px);
+    width: 100%; height: 100vh;
+    background-image: url(../../../../assets/background_blur.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+  
 }
-.placeholder-container{
-    background: #fdfdfe;
-    padding-top:16px;
-    max-height: 1012px;
-}
+
 
 .menu{
     max-width: 256px;
