--- a/src/app/pages/login/login-form/login-form.component.css
+++ b/src/app/pages/login/login-form/login-form.component.css
@@ -14,6 +14,11 @@
     left:50%;
     margin-left: -215px;
     margin-top: -215px;
+   
+    background: rgba(255,255,255,0.9);
+}
+
+.card::before{
     
 }
 
@@ -26,7 +31,7 @@
 
 
 .card-header{
-    
+    opacity: 80%;
    
 }
 
