--- a/src/app/pages/dashboard/dash/dash.component.html
+++ b/src/app/pages/dashboard/dash/dash.component.html
@@ -17,17 +17,37 @@
 
         <div class="col-6 coluna">
             <div class="card">
-
+                <div class="card-header">
+                        <h2>Notficações</h2>
+                </div>
+                <div class="card-body">
+                    <p>Vestibulum aliquet ante vel massa volutpat, eu placerat lectus ultrices.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                </div>
             </div>
         </div><!--Fim Coluna 02 da linha 01-->
     </div><!--Fim linha 01-->
     <div class="row linha02">
         <div class="col-6 coluna"> 
-
+            <div class="card">
+                <div class="card-header">
+                        <h2>Grafico de despesas</h2>
+                </div>
+                <div class="card-body" >
+                    <app-examplecard></app-examplecard>
+                </div>
+            </div>
         </div><!--Fim da coluna 01 linha 02-->
 
         <div class="col-6 coluna">
-
+            <div class="card">
+                <div class="card-header">
+                        <h2>Grafico de receitas</h2>
+                </div>
+                <div class="card-body">
+                    <app-examplecard></app-examplecard>
+                </div>
+            </div>
         </div><!--Fim da coluna 02 linha 02-->
     </div><!--Fim linha 01-->
 </div>
