--- a/src/app/shared/components/bread-crumb/bread-crumb.component.html
+++ b/src/app/shared/components/bread-crumb/bread-crumb.component.html
@@ -1,6 +1,6 @@
 <nav class ="mb-5">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a routerLink = '/'>Home</a></li>
+        <li class="breadcrumb-item"><a routerLink = '/dash'>Home</a></li>
         <li *ngFor="let item of items" class="breadcrumb-item" [class.active]="isTheLast(item)">
             <span *ngIf="isTheLast(item)">{{item.text}}</span>
             <a *ngIf="!isTheLast(item)" [routerLink]="item.link">{{item.text}}</a>
