--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .menu-background-color{
-    background: #eaeaef !important;
+    background: #eee !important;
 }
 
 .body-background-color{
